--- a/common/nyxd-scraper-psql/Cargo.toml
+++ b/common/nyxd-scraper-psql/Cargo.toml
@@ -22,7 +22,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing.workspace = true
 
-nyxd-scraper-shared = { path = "../nyxd-scraper-shared" }
+nyxd-scraper-shared = { workspace = true }
 
 # temp due to cosmrs redefinitions for serde
 cosmrs = { workspace = true }
