--- a/common/nyxd-scraper-sqlite/Cargo.toml
+++ b/common/nyxd-scraper-sqlite/Cargo.toml
@@ -18,7 +18,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing.workspace = true
 
-nyxd-scraper-shared = { path = "../nyxd-scraper-shared" }
+nyxd-scraper-shared = { workspace = true }
 
 
 [build-dependencies]
