--- a/nym-data-observatory/Cargo.toml
+++ b/nym-data-observatory/Cargo.toml
@@ -21,12 +21,12 @@ chrono = { workspace = true }
 clap = { workspace = true, features = ["cargo", "derive", "env"] }
 cosmrs = { workspace = true }
 nym-config = { workspace = true }
-nym-bin-common = { path = "../common/bin-common", features = ["output_format"] }
-nym-network-defaults = { path = "../common/network-defaults" }
-nym-task = { path = "../common/task" }
+nym-bin-common = { workspace = true, features = ["output_format"] }
+nym-network-defaults = { workspace = true }
+nym-task = { workspace = true }
 nym-validator-client = { workspace = true }
 nyxd-scraper-psql = { path = "../common/nyxd-scraper-psql" }
-nyxd-scraper-shared = { path = "../common/nyxd-scraper-shared" }
+nyxd-scraper-shared = { workspace = true }
 reqwest = { workspace = true, features = ["rustls-tls"] }
 schemars = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
