--- a/Cargo.toml
+++ b/Cargo.toml
@@ -402,6 +402,7 @@ nym-client-core = { version = "1.20.1", path = "common/client-core", default-fea
 nym-client-core-config-types = { version = "1.20.1", path = "common/client-core/config-types" }
 nym-client-core-gateways-storage = { version = "1.20.1", path = "common/client-core/gateways-storage" }
 nym-client-core-surb-storage = { version = "1.20.1", path = "common/client-core/surb-storage" }
+nym-client-websocket-requests = { version = "1.20.1", path = "clients/native/websocket-requests" }
 nym-common = { version = "1.20.1", path = "common/nym-common" }
 nym-compact-ecash = { version = "1.20.1", path = "common/nym_offline_compact_ecash" }
 nym-config = { version = "1.20.1", path = "common/config" }
@@ -409,11 +410,13 @@ nym-contracts-common = { version = "1.20.1", path = "common/cosmwasm-smart-contr
 nym-coconut-dkg-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/coconut-dkg" }
 nym-credential-storage = { version = "1.20.1", path = "common/credential-storage" }
 nym-credential-utils = { version = "1.20.1", path = "common/credential-utils" }
+nym-credential-proxy-lib = { version = "1.20.1", path = "common/credential-proxy" }
 nym-credentials = { version = "1.20.1", path = "common/credentials", default-features = false }
 nym-credentials-interface = { version = "1.20.1", path = "common/credentials-interface" }
 nym-credential-proxy-requests = { version = "1.20.1", path = "nym-credential-proxy/nym-credential-proxy-requests", default-features = false }
 nym-credential-verification = { version = "1.20.1", path = "common/credential-verification" }
 nym-crypto = { version = "1.20.1", path = "common/crypto", default-features = false }
+nym-dkg = { version = "1.20.1", path = "common/dkg" }
 nym-ecash-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/ecash-contract" }
 nym-ecash-signer-check = { version = "1.20.1", path = "common/ecash-signer-check" }
 nym-ecash-signer-check-types = { version = "1.20.1", path = "common/ecash-signer-check-types" }
@@ -423,6 +426,7 @@ nym-ffi-shared = { version = "1.20.1", path = "sdk/ffi/shared" }
 nym-gateway-client = { version = "1.20.1", path = "common/client-libs/gateway-client", default-features = false }
 nym-gateway-requests = { version = "1.20.1", path = "common/gateway-requests" }
 nym-gateway-storage = { version = "1.20.1", path = "common/gateway-storage" }
+nym-gateway-stats-storage = { version = "1.20.1", path = "common/gateway-stats-storage" }
 nym-group-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/group-contract" }
 nym-http-api-client = { version = "1.20.1", path = "common/http-api-client" }
 nym-http-api-client-macro = { version = "1.20.1", path = "common/http-api-client-macro" }
@@ -475,6 +479,7 @@ nym-types = { version = "1.20.1", path = "common/types" }
 nym-upgrade-mode-check = { version = "1.20.1", path = "common/upgrade-mode-check" }
 nym-validator-client = { version = "1.20.1", path = "common/client-libs/validator-client", default-features = false }
 nym-vesting-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/vesting-contract" }
+nym-verloc = { version = "1.20.1", path = "common/verloc" }
 nym-wireguard = { version = "1.20.1", path = "common/wireguard" }
 nym-wireguard-types = { version = "1.20.1", path = "common/wireguard-types" }
 nym-wireguard-private-metadata-shared =  { version = "1.20.1", path = "common/wireguard-private-metadata/shared" }
@@ -484,6 +489,7 @@ nym-sqlx-pool-guard = { version = "1.2.0", path = "nym-sqlx-pool-guard" }
 nym-wasm-client-core = { version = "1.20.1", path = "common/wasm/client-core" }
 nym-wasm-storage = { version = "1.20.1", path = "common/wasm/storage" }
 nym-wasm-utils = { version = "1.20.1", path = "common/wasm/utils", default-features = false }
+nyxd-scraper-shared = { version = "1.20.1", path = "common/nyxd-scraper-shared" }
 
 # coconut/DKG related
 # unfortunately until https://github.com/zkcrypto/nym-bls12_381-fork/issues/10 is resolved, we have to rely on the fork
