--- a/clients/socks5/Cargo.toml
+++ b/clients/socks5/Cargo.toml
@@ -25,29 +25,29 @@ url = { workspace = true }
 zeroize = { workspace = true }
 
 # internal
-nym-bin-common = { path = "../../common/bin-common", features = [
+nym-bin-common = { workspace = true, features = [
     "output_format",
     "clap",
     "basic_tracing",
 ] }
-nym-client-core = { path = "../../common/client-core", features = [
+nym-client-core = { workspace = true, features = [
     "fs-credentials-storage",
     "fs-surb-storage",
     "fs-gateways-storage",
     "cli",
 ] }
 nym-config = { workspace = true }
-nym-credential-storage = { path = "../../common/credential-storage" }
-nym-credentials = { path = "../../common/credentials" }
-nym-crypto = { path = "../../common/crypto" }
-nym-gateway-requests = { path = "../../common/gateway-requests" }
-nym-id = { path = "../../common/nym-id" }
-nym-network-defaults = { path = "../../common/network-defaults" }
+nym-credential-storage = { workspace = true }
+nym-credentials = { workspace = true }
+nym-crypto = { workspace = true }
+nym-gateway-requests = { workspace = true }
+nym-id = { workspace = true }
+nym-network-defaults = { workspace = true }
 nym-ordered-buffer = { workspace = true }
-nym-pemstore = { path = "../../common/pemstore" }
-nym-socks5-client-core = { path = "../../common/socks5-client-core" }
-nym-sphinx = { path = "../../common/nymsphinx" }
-nym-topology = { path = "../../common/topology" }
+nym-pemstore = { workspace = true }
+nym-socks5-client-core = { workspace = true }
+nym-sphinx = { workspace = true }
+nym-topology = { workspace = true }
 nym-validator-client = { workspace = true, features = [
     "http-client",
 ] }
