--- a/nym-node-status-api/nym-node-status-client/Cargo.toml
+++ b/nym-node-status-api/nym-node-status-client/Cargo.toml
@@ -18,8 +18,8 @@ publish = false
 anyhow = { workspace = true }
 bs58 = { workspace = true }
 bincode = { workspace = true }
-nym-crypto = { path = "../../common/crypto", features = ["asymmetric", "serde", ] }
-nym-credentials = { path = "../../common/credentials" }
+nym-crypto = { workspace = true, features = ["asymmetric", "serde", ] }
+nym-credentials = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
