--- a/nym-node/Cargo.toml
+++ b/nym-node/Cargo.toml
@@ -50,39 +50,39 @@ zeroize = { workspace = true, features = ["zeroize_derive"] }
 cupid = { workspace = true }
 sysinfo = { workspace = true }
 
-nym-bin-common = { path = "../common/bin-common", features = [
+nym-bin-common = { workspace = true, features = [
     "basic_tracing",
     "output_format",
 ] }
-nym-client-core-config-types = { path = "../common/client-core/config-types", features = [
+nym-client-core-config-types = { workspace = true, features = [
     "disk-persistence",
 ] }
 nym-config = { workspace = true }
-nym-credential-verification = { path = "../common/credential-verification" }
-nym-crypto = { path = "../common/crypto", features = ["asymmetric", "rand"] }
-nym-nonexhaustive-delayqueue = { path = "../common/nonexhaustive-delayqueue" }
-nym-mixnet-client = { path = "../common/client-libs/mixnet-client" }
-nym-noise = { path = "../common/nymnoise" }
-nym-noise-keys = { path = "../common/nymnoise/keys" }
-nym-pemstore = { path = "../common/pemstore" }
+nym-credential-verification = { workspace = true }
+nym-crypto = { workspace = true, features = ["asymmetric", "rand"] }
+nym-nonexhaustive-delayqueue = { workspace = true }
+nym-mixnet-client = { workspace = true }
+nym-noise = { workspace = true }
+nym-noise-keys = { workspace = true }
+nym-pemstore = { workspace = true }
 nym-sphinx-acknowledgements = { workspace = true }
 nym-sphinx-addressing = { workspace = true }
 nym-sphinx-framing = { workspace = true }
 nym-sphinx-types = { workspace = true }
 nym-sphinx-forwarding = { workspace = true }
-nym-sphinx-routing = { path = "../common/nymsphinx/routing" }
-nym-sphinx-params = { path = "../common/nymsphinx/params" }
-nym-statistics-common = { path = "../common/statistics" }
-nym-task = { path = "../common/task" }
-nym-types = { path = "../common/types" }
+nym-sphinx-routing = { workspace = true }
+nym-sphinx-params = { workspace = true }
+nym-statistics-common = { workspace = true }
+nym-task = { workspace = true }
+nym-types = { workspace = true }
 nym-validator-client = { workspace = true }
-nym-wireguard = { path = "../common/wireguard" }
+nym-wireguard = { workspace = true }
 nym-wireguard-types = { workspace = true }
-nym-verloc = { path = "../common/verloc" }
+nym-verloc = { workspace = true }
 nym-metrics = { workspace = true}
-nym-gateway-stats-storage = { path = "../common/gateway-stats-storage" }
+nym-gateway-stats-storage = { workspace = true }
 nym-topology = { workspace = true }
-nym-http-api-client = { path = "../common/http-api-client" }
+nym-http-api-client = { workspace = true }
 
 # http server
 # useful for `#[axum_macros::debug_handler]`
@@ -98,10 +98,10 @@ nym-http-api-common = { workspace = true, features = [
     "output",
     "middleware",
 ] }
-nym-node-requests = { path = "nym-node-requests", default-features = false, features = [
+nym-node-requests = { workspace = true, default-features = false, features = [
     "openapi",
 ] }
-nym-node-metrics = { path = "nym-node-metrics" }
+nym-node-metrics = { workspace = true }
 
 # nodes:
 nym-gateway = { path = "../gateway" }
