--- a/nym-signers-monitor/Cargo.toml
+++ b/nym-signers-monitor/Cargo.toml
@@ -21,10 +21,10 @@ tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 tracing = { workspace = true }
 url = { workspace = true }
 
-nym-bin-common = { path = "../common/bin-common", features = ["output_format", "basic_tracing"] }
-nym-ecash-signer-check = { path = "../common/ecash-signer-check" }
-nym-network-defaults = { path = "../common/network-defaults" }
-nym-task = { path = "../common/task" }
+nym-bin-common = { workspace = true, features = ["output_format", "basic_tracing"] }
+nym-ecash-signer-check = { workspace = true }
+nym-network-defaults = { workspace = true }
+nym-task = { workspace = true }
 nym-validator-client = { workspace = true }
 zulip-client = { path = "../common/zulip-client" }
 
