--- a/nym-validator-rewarder/Cargo.toml
+++ b/nym-validator-rewarder/Cargo.toml
@@ -40,15 +40,15 @@ nym-contracts-common = { workspace = true }
 nym-compact-ecash = { workspace = true }
 nym-crypto = { workspace = true, features = ["asymmetric", "rand"] }
 nym-credentials = { workspace = true }
-nym-network-defaults = { path = "../common/network-defaults" }
-nym-task = { path = "../common/task" }
+nym-network-defaults = { workspace = true }
+nym-task = { workspace = true }
 nym-validator-client = { workspace = true }
-nym-http-api-client = { path = "../common/http-api-client" }
+nym-http-api-client = { workspace = true }
 nym-coconut-dkg-common = { workspace = true }
 nyxd-scraper-sqlite = { path = "../common/nyxd-scraper-sqlite" }
-nym-ticketbooks-merkle = { path = "../common/ticketbooks-merkle" }
-nym-serde-helpers = { path = "../common/serde-helpers", features = ["base64"] }
-nym-pemstore = { path = "../common/pemstore" }
+nym-ticketbooks-merkle = { workspace = true }
+nym-serde-helpers = { workspace = true, features = ["base64"] }
+nym-pemstore = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
@@ -57,7 +57,7 @@ tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 
 [dev-dependencies]
 rand_chacha = { workspace = true }
-nym-credentials-interface = { path = "../common/credentials-interface" }
+nym-credentials-interface = { workspace = true }
 
 [lints]
 workspace = true
