--- a/tools/internal/contract-state-importer/importer-cli/Cargo.toml
+++ b/tools/internal/contract-state-importer/importer-cli/Cargo.toml
@@ -23,8 +23,8 @@ tracing = { workspace = true }
 
 importer-contract = { path = "../importer-contract" }
 nym-validator-client = { workspace = true }
-nym-bin-common = { path = "../../../../common/bin-common", features = ["basic_tracing"] }
-nym-network-defaults = { path = "../../../../common/network-defaults" }
+nym-bin-common = { workspace = true, features = ["basic_tracing"] }
+nym-network-defaults = { workspace = true }
 
-nym-mixnet-contract-common = { path = "../../../../common/cosmwasm-smart-contracts/mixnet-contract" }
-nym-vesting-contract-common = { path = "../../../../common/cosmwasm-smart-contracts/vesting-contract" }
+nym-mixnet-contract-common = { workspace = true }
+nym-vesting-contract-common = { workspace = true }
