--- a/tools/nymvisor/Cargo.toml
+++ b/tools/nymvisor/Cargo.toml
@@ -33,10 +33,10 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 
-nym-async-file-watcher = { path = "../../common/async-file-watcher" }
-nym-bin-common = { path = "../../common/bin-common", features = ["output_format", "basic_tracing"] }
+nym-async-file-watcher = { workspace = true }
+nym-bin-common = { workspace = true, features = ["output_format", "basic_tracing"] }
 nym-config = { workspace = true }
-nym-task = { path = "../../common/task"}
+nym-task = { workspace = true}
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
