--- a/common/statistics/Cargo.toml
+++ b/common/statistics/Cargo.toml
@@ -7,6 +7,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 description = "This crate contains basic statistics utilities and abstractions to be re-used and applied throughout both the client and gateway implementations"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
