--- a/sdk/rust/nym-sdk/Cargo.toml
+++ b/sdk/rust/nym-sdk/Cargo.toml
@@ -15,13 +15,14 @@ name = "nym-proxy-client"
 path = "src/tcp_proxy/bin/proxy_client.rs"
 
 [dependencies]
-async-trait = { workspace = true }
-bip39 = { workspace = true }
 nym-client-core = { path = "../../../common/client-core", features = [
     "fs-credentials-storage",
     "fs-surb-storage",
     "fs-gateways-storage",
 ] }
+async-trait = { workspace = true }
+bip39 = { workspace = true }
+
 nym-crypto = { path = "../../../common/crypto" }
 nym-gateway-requests = { path = "../../../common/gateway-requests" }
 nym-bandwidth-controller = { path = "../../../common/bandwidth-controller" }
@@ -46,6 +47,7 @@ nym-sphinx-addressing = { path = "../../../common/nymsphinx/addressing" }
 nym-bin-common = { path = "../../../common/bin-common", features = [
     "basic_tracing",
 ] }
+
 bytecodec = { workspace = true }
 httpcodec = { workspace = true }
 bytes = { workspace = true }
@@ -60,6 +62,11 @@ thiserror = { workspace = true }
 url = { workspace = true }
 toml = { workspace = true }
 tempfile = { workspace = true }
+
+nym-ip-packet-requests = { path = "../../../common/ip-packet-requests" }
+pnet_packet = { workspace = true }
+nym-config = { path = "../../../common/config" }
+
 
 # tcpproxy dependencies
 clap = { workspace = true, features = ["derive"] }
