--- a/common/nym_offline_compact_ecash/Cargo.toml
+++ b/common/nym_offline_compact_ecash/Cargo.toml
@@ -7,6 +7,10 @@ version.workspace = true
 authors = ["Ania Piotrowska <ania@nymtech.net>"]
 edition = "2021"
 license = { workspace = true }
+description = "Nym's ecash implementation"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
