added LP discovery into self-described endpoint:
- removed changes to the node bonding within the contract
- introduced '/api/v1/lewes-protocol' route within nym-node http api
- added 'lewes_protocol' field to 'NymNodeData' inside of NymNodeDescription
- refactored LpConfig to allow separate bind and announce addresses and used more strict typing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -192,6 +192,7 @@ default-members = [
     "service-providers/ip-packet-router",
     "service-providers/network-requester",
     "tools/nymvisor",
+    "nym-registration-client"
 ]
 
 exclude = ["contracts", "nym-wallet", "cpu-cycles"]
