standarise lp serialisation: - stop using bincode within `LpMessage` in favour of predictable bytes concatenation - use consistent encode/decode interface for every `LpMessage` inner variant - hide usage of bincode within `LpRegistrationResponse` / `LpRegistrationResponse` behind `serialise` / `try_deserialise` interface

--- a/common/registration/Cargo.toml
+++ b/common/registration/Cargo.toml
@@ -12,6 +12,7 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+bincode = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio-util.workspace = true
 
