--- a/common/nym-kkt/Cargo.toml
+++ b/common/nym-kkt/Cargo.toml
@@ -20,13 +20,17 @@ libcrux-sha3 = { git = "https://github.com/cryspen/libcrux" }
 libcrux-ecdh = { git = "https://github.com/cryspen/libcrux", features = ["codec"] }
 libcrux-chacha20poly1305 = { git = "https://github.com/cryspen/libcrux" }
 
+#rand = "0.9.2"
 rand = "0.9.2"
 zeroize = { workspace = true, features = ["zeroize_derive"] }
 classic-mceliece-rust = { git = "https://github.com/georgio/classic-mceliece-rust", features = ["mceliece460896f", "zeroize"] }
 
 
 [dev-dependencies]
+rand_chacha = "0.9.0"
+anyhow = { workspace = true }
 criterion = { workspace = true }
+
 
 [[bench]]
 name = "benches"
