--- a/common/nym-lp/Cargo.toml
+++ b/common/nym-lp/Cargo.toml
@@ -13,9 +13,7 @@ serde = { workspace = true }
 bytes = { workspace = true }
 dashmap = { workspace = true }
 sha2 = { workspace = true }
-ansi_term = { workspace = true }
 tracing = { workspace = true }
-utoipa = { workspace = true, features = ["macros", "non_strict_integers"] }
 rand = { workspace = true }
 # rand 0.9 for KKT integration (nym-kkt uses rand 0.9)
 rand09 = { package = "rand", version = "0.9.2" }
@@ -23,7 +21,6 @@ rand09 = { package = "rand", version = "0.9.2" }
 nym-crypto = { path = "../crypto", features = ["hashing", "asymmetric"] }
 nym-kkt = { path = "../nym-kkt" }
 nym-lp-common = { path = "../nym-lp-common" }
-nym-sphinx = { path = "../nymsphinx" }
 
 # libcrux dependencies for PSQ (Post-Quantum PSK derivation)
 libcrux-psq = { git = "https://github.com/cryspen/libcrux", features = [
@@ -39,6 +36,7 @@ zeroize = { workspace = true, features = ["zeroize_derive"] }
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 rand_chacha = "0.3"
+nym-crypto = { path = "../crypto", features = ["rand"] }
 
 
 [[bench]]
