--- a/tools/nym-lp-client/Cargo.toml
+++ b/tools/nym-lp-client/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "LP+KCP mixnet client"
 license.workspace = true
+publish = false
 
 [[bin]]
 name = "nym-lp-client"
