--- a/common/nym-lp-common/Cargo.toml
+++ b/common/nym-lp-common/Cargo.toml
@@ -3,5 +3,6 @@ name = "nym-lp-common"
 version = "0.1.0"
 edition = { workspace = true }
 license = { workspace = true }
+publish = false
 
 [dependencies]
