--- a/common/nym-lp/Cargo.toml
+++ b/common/nym-lp/Cargo.toml
@@ -3,6 +3,7 @@ name = "nym-lp"
 version = "0.1.0"
 edition = { workspace = true }
 license = { workspace = true }
+publish = false
 
 [dependencies]
 thiserror = { workspace = true }
