--- a/common/test-utils/Cargo.toml
+++ b/common/test-utils/Cargo.toml
@@ -18,7 +18,7 @@ rand_chacha = { workspace = true }
 tokio = { workspace = true, features = ["sync", "time", "rt"] }
 tracing = { workspace = true }
 
-nym-bin-common = { path = "../bin-common", features = ["tracing"] }
+nym-bin-common = { workspace = true, features = ["tracing"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
